Вношу поправки в именах

--- a/index.html
+++ b/index.html
@@ -78,25 +78,25 @@
             <ul>
                 <li>
                     <img src="images/img3.jpg" alt="ігор дем'яненко" width="270">
-                    Ігор Дем'яненко
+                    <h2>Ігор Дем'яненко</h2>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
                     <img src="images/img4.jpg" alt="ольга рєпіна" width="270">
-                    Ольга Рєпіна
+                    <h2>Ольга Рєпіна</h2>
                     <p>Frontend Developer</p>
                 </li>
 
                 <li>
                     <img src="images/img5.jpg" alt="микола тарасов" width="270">
-                    Микола Тарасов
+                    <h2>Микола Тарасов</h2>
                     <p>Marketing</p>
                 </li>
 
                 <li>
                     <img src="images/img6.jpg" alt="михайло єрмаков" width="270">
-                    Михайло Єрмаков
+                    <h2>Михайло Єрмаков</h2>
                     <p>UI Designer</p>
                 </li>
             </ul>
