--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <Header>
         <nav>
-            <a href=""><span>Web</span>Studio</a>
+            <a href="./index.html"><span>Web</span>Studio</a>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><span>Студія</span></a>
                 </li>
