--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -11,11 +11,11 @@
 <body>
 
     <!-- Header -->
-    <Header>
+    <header>
         <nav>
             <a href="./index.html"><span>Web</span>Studio</a>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><span>Студія</span></a>
+                <li><a href=""><span>Студія</span></a>
                 </li>
                 <li><a href="">Портфоліо </a></li>
 
@@ -25,14 +25,14 @@
         <!-- Contact -->
         <ul>
             <li>
-                <a href="info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="+380961111111">+38 096 111 11 11</a>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
 
         </ul>
-    </Header>
+    </header>
     <!-- Hero  -->
     <main>
         <section>
@@ -42,23 +42,29 @@
         </section>
         <!-- Kakoito tekst -->
         <section>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <ul>
-                <li> Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</li>
-            </ul>
+                <li>
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
 
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <ul>
-                <li> Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</li>
-            </ul>
+                    Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                </li>
 
-            <h3>ПЛАНУВАННЯ</h3>
-            <ul>
-                <li> Так само консультація з широким активом значною мірою зумовлює.</li>
-            </ul>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <ul>
-                <li> Значимість цих проблем настільки очевидна, що реалізація планових завдань.</li>
+                <li>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+
+                    Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                </li>
+
+                <li>
+                    <h3>ПЛАНУВАННЯ</h3>
+
+                    Так само консультація з широким активом значною мірою зумовлює.
+                </li>
+                <li>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+
+                    Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                </li>
             </ul>
 
         </section>
@@ -74,29 +80,29 @@
         </section>
         <!-- Nasha Komanda -->
         <section>
-            <h3>Наша команда</h3>
+            <h2>Наша команда</h2>
             <ul>
                 <li>
                     <img src="images/img3.jpg" alt="ігор дем'яненко" width="270">
-                    <h2>Ігор Дем'яненко</h2>
+                    <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
                     <img src="images/img4.jpg" alt="ольга рєпіна" width="270">
-                    <h2>Ольга Рєпіна</h2>
+                    <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
 
                 <li>
                     <img src="images/img5.jpg" alt="микола тарасов" width="270">
-                    <h2>Микола Тарасов</h2>
+                    <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
                     <img src="images/img6.jpg" alt="михайло єрмаков" width="270">
-                    <h2>Михайло Єрмаков</h2>
+                    <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -104,15 +110,15 @@
     </main>
     <!-- Podval -->
     <footer>
-        <h2>WebStudio</h2>
+        <a href="./index.html"><span>Web</span>Studio</a>
         <address>
             м. Київ, пр-т Лесі Українки, 26
             <ul>
                 <li>
-                    <a href="info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="+380961111111">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
