Первая верстка без изменений

--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;700&display=swap');
+    </style>
     <title>Document</title>
 </head>
 
-<body>
+<body class="body">
 
     <!-- Header -->
     <header>
-        <nav>
-            <a href="./index.html"><span>Web</span>Studio</a>
+        <nav class="nav">
+            <a href="" class="logo"><span class="web">Web</span>Studio</a>
             <ul>
-                <li><a href=""><span>Студія</span></a>
+                <li><a href="" class="studio">Студія</a>
                 </li>
-                <li><a href="">Портфоліо </a></li>
+                <li><a href="./portfolio.html" class="portfolio">Портфоліо </a></li>
 
                 <li><a href="">Контакти</a></li>
             </ul>
@@ -37,7 +41,7 @@
     <main>
         <section>
             <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button>Замовити послугу
+            <button class="posluga" type="button">Замовити послугу
             </button>
         </section>
         <!-- Kakoito tekst -->
@@ -114,8 +118,8 @@
         </section>
     </main>
     <!-- Podval -->
-    <footer>
-        <a href="./index.html"><span>Web</span>Studio</a>
+    <footer class="footer">
+        <a href="" class="logo"><span class="web">Web</span>Studio</a>
         <address>
             м. Київ, пр-т Лесі Українки, 26
             <ul>
