--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
         <!-- Contact -->
         <ul>
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
             </li>
 
         </ul>
     </header>
     <!-- Hero  -->
     <main>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
+        <section class="fon">
+            <h1 class="h">Ефективні рішення для вашого бізнесу</h1>
             <button class="posluga" type="button">Замовити послугу
             </button>
         </section>
@@ -48,27 +48,27 @@
         <section>
             <ul>
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <h3 class="hhh">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>
                         Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                     </p>
                 </li>
 
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <h3 class="hhh">ПУНКТУАЛЬНІСТЬ</h3>
                     <p>
                         Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                     </p>
                 </li>
 
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
+                    <h3 class="hhh">ПЛАНУВАННЯ</h3>
                     <p>
                         Так само консультація з широким активом значною мірою зумовлює.
                     </p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <h3 class="hhh">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p>
                         Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                     </p>
@@ -79,7 +79,7 @@
         </section>
         <!-- Chem Zanimaemsa -->
         <section>
-            <h2>Чим ми займаємося</h2>
+            <h2 class="hhh"><span class="bol-slov">Чим ми займаємося</span></h2>
             <ul>
                 <li><img src="./images/img.jpg" alt="человек работает за компом" width="370"> </li>
                 <li><img src="./images/img1.jpg" alt="человек работает за компом" width="370"> </li>
@@ -89,29 +89,29 @@
         </section>
         <!-- Nasha Komanda -->
         <section>
-            <h2>Наша команда</h2>
+            <h2 class="hhh"><span class="bol-slov">Наша команда</span></h2>
             <ul>
                 <li>
                     <img src="images/img3.jpg" alt="ігор дем'яненко" width="270">
-                    <h3>Ігор Дем'яненко</h3>
+                    <h3 class="hhh">Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
                     <img src="images/img4.jpg" alt="ольга рєпіна" width="270">
-                    <h3>Ольга Рєпіна</h3>
+                    <h3 class="hhh">Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
 
                 <li>
                     <img src="images/img5.jpg" alt="микола тарасов" width="270">
-                    <h3>Микола Тарасов</h3>
+                    <h3 class="hhh">Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
                     <img src="images/img6.jpg" alt="михайло єрмаков" width="270">
-                    <h3>Михайло Єрмаков</h3>
+                    <h3 class="hhh">Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -124,10 +124,10 @@
             м. Київ, пр-т Лесі Українки, 26
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
