--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
         <!-- Contact -->
         <ul>
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
             </li>
 
         </ul>
@@ -48,49 +48,49 @@
         </ul>
         <!-- Kartinki -->
         <ul class="imgg">
-            <li><img src="./img/img.jpg" alt="технокряк">
+            <li><img src="./img/img.jpg" alt="технокряк" width="370px">
                 <h1 class="hh">Технокряк</h1>
-                <p>Веб-сайт</p>
+                <p class="p">Веб-сайт</p>
             </li>
             <li>
-                <img src="./img/img1.jpg" alt="постер баскедбольной команди">
+                <img src="./img/img1.jpg" alt="постер баскедбольной команди" width="370px">
                 <h1 class="hh">Постер New Orlean vs Golden Star</h1>
-                <p>Дизайн</p>
+                <p class="p">Дизайн</p>
             </li>
             <li>
-                <img src="./img/img2.jpg" alt="логотип ресторана">
+                <img src="./img/img2.jpg" alt="логотип ресторана" width="370px">
                 <h1 class="hh">Ресторан Seafood</h1>
-                <p>Додаток</p>
+                <p class="p">Додаток</p>
             </li>
             <li>
-                <img src="./img/img3.jpg" alt="наушники">
+                <img src="./img/img3.jpg" alt="наушники" width="370px">
                 <h1 class="hh">Проєкт Prime</h1>
-                <p>Маркетинг</p>
+                <p class="p">Маркетинг</p>
             </li>
             <li>
-                <img src="./img/img4.jpg" alt="коробочки">
+                <img src="./img/img4.jpg" alt="коробочки" width="370px">
                 <h1 class="hh">Проєкт Boxes</h1>
-                <p>Додаток</p>
+                <p class="p">Додаток</p>
             </li>
             <li>
-                <img src="./img/img5.jpg" alt="монитор">
+                <img src="./img/img5.jpg" alt="монитор" width="370px">
                 <h1 class="hh">Inspiration has no Borders</h1>
-                <p>Веб-сайт</p>
+                <p class="p">Веб-сайт</p>
             </li>
             <li>
-                <img src="./img/img6.jpg" alt="книга">
+                <img src="./img/img6.jpg" alt="книга" width="370px">
                 <h1 class="hh">Видання Limited Edition</h1>
-                <p>Дизайн</p>
+                <p class="p">Дизайн</p>
             </li>
             <li>
-                <img src="./img/img7.jpg" alt="постер проекта">
+                <img src="./img/img7.jpg" alt="постер проекта" width="370px">
                 <h1 class="hh">Проєкт LAB</h1>
-                <p>Маркетинг</p>
+                <p class="p">Маркетинг</p>
             </li>
             <li>
-                <img src="./img/img8.jpg" alt="робота за компом">
+                <img src="./img/img8.jpg" alt="робота за компом" width="370px">
                 <h1 class="hh">Growing Business</h1>
-                <p>Додаток</p>
+                <p class="p">Додаток</p>
             </li>
         </ul>
     </main>
@@ -101,10 +101,10 @@
             м. Київ, пр-т Лесі Українки, 26
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
