Исправляю ошибки , добавляю новий контент

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styless.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;700&display=swap');
     </style>
@@ -22,7 +22,7 @@
                 </li>
                 <li><a href="./portfolio.html" class="portfolio">Портфоліо </a></li>
 
-                <li><a href="">Контакти</a></li>
+                <li><a href="" class="contact">Контакти</a></li>
             </ul>
         </nav>
         <!-- Contact -->
@@ -40,11 +40,11 @@
     <main>
         <!-- Navigacia -->
         <ul class="navigasia">
-            <li><button type="button">Усі</button></li>
-            <li><button type="button">Веб-сайти</button></li>
-            <li><button type="button">Додатки</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+            <li><button type="button" class="button">Усі</button></li>
+            <li><button type="button" class="button">Веб-сайти</button></li>
+            <li><button type="button" class="button">Додатки</button></li>
+            <li><button type="button" class="button">Дизайн</button></li>
+            <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
         <!-- Kartinki -->
         <ul class="imgg">
@@ -98,7 +98,7 @@
     <footer class="footer">
         <a href="" class="logo"><span class="web">Web</span>Studio</a>
         <address>
-            м. Київ, пр-т Лесі Українки, 26
+            <p>м. Київ, пр-т Лесі Українки, 26</p>
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
