--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 </li>
                 <li><a href="./portfolio.html" class="portfolio">Портфоліо </a></li>
 
-                <li><a href="">Контакти</a></li>
+                <li><a href="" class="contact">Контакти</a></li>
             </ul>
         </nav>
         <!-- Contact -->
-        <ul>
+        <ul class="nomer">
             <li>
                 <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
             </li>
@@ -41,8 +41,7 @@
     <main>
         <section class="fon">
             <h1 class="h">Ефективні рішення для вашого бізнесу</h1>
-            <button class="posluga" type="button">Замовити послугу
-            </button>
+            <button class="posluga">Замовити послугу</button>
         </section>
         <!-- Kakoito tekst -->
         <section>
@@ -78,7 +77,7 @@
 
         </section>
         <!-- Chem Zanimaemsa -->
-        <section>
+        <section class="zanatia">
             <h2 class="hhh"><span class="bol-slov">Чим ми займаємося</span></h2>
             <ul>
                 <li><img src="./images/img.jpg" alt="человек работает за компом" width="370"> </li>
@@ -88,31 +87,31 @@
             </ul>
         </section>
         <!-- Nasha Komanda -->
-        <section>
+        <section class="comanda">
             <h2 class="hhh"><span class="bol-slov">Наша команда</span></h2>
             <ul>
                 <li>
                     <img src="images/img3.jpg" alt="ігор дем'яненко" width="270">
                     <h3 class="hhh">Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
+                    <p class="hhh">Product Designer</p>
                 </li>
 
                 <li>
                     <img src="images/img4.jpg" alt="ольга рєпіна" width="270">
                     <h3 class="hhh">Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
+                    <p class="hhh">Frontend Developer</p>
                 </li>
 
                 <li>
                     <img src="images/img5.jpg" alt="микола тарасов" width="270">
                     <h3 class="hhh">Микола Тарасов</h3>
-                    <p>Marketing</p>
+                    <p class="hhh">Marketing</p>
                 </li>
 
                 <li>
                     <img src="images/img6.jpg" alt="михайло єрмаков" width="270">
                     <h3 class="hhh">Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <p class="hhh">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -121,7 +120,7 @@
     <footer class="footer">
         <a href="" class="logo"><span class="web">Web</span>Studio</a>
         <address>
-            м. Київ, пр-т Лесі Українки, 26
+            <p>м. Київ, пр-т Лесі Українки, 26</p>
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
