--- a/portfolio.html
+++ b/portfolio.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styless.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap');
     </style>
     <title>Document</title>
 </head>
 
 <body class="body">
     <!-- Header -->
-    <header>
-        <nav class="nav">
+    <header class="header">
+        <nav>
             <a href="" class="logo"><span class="web">Web</span>Studio</a>
             <ul>
                 <li><a href="./index.html" class="studio">Студія</a>
@@ -31,7 +31,7 @@
                 <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
             </li>
 
         </ul>
@@ -47,49 +47,49 @@
             <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
         <!-- Kartinki -->
-        <ul class="imgg">
+        <ul class="menu">
             <li><img src="./img/img.jpg" alt="технокряк" width="370px">
-                <h1 class="hh">Технокряк</h1>
+                <h1 class="zagolovok">Технокряк</h1>
                 <p class="p">Веб-сайт</p>
             </li>
             <li>
                 <img src="./img/img1.jpg" alt="постер баскедбольной команди" width="370px">
-                <h1 class="hh">Постер New Orlean vs Golden Star</h1>
+                <h1 class="zagolovok">Постер New Orlean vs Golden Star</h1>
                 <p class="p">Дизайн</p>
             </li>
             <li>
                 <img src="./img/img2.jpg" alt="логотип ресторана" width="370px">
-                <h1 class="hh">Ресторан Seafood</h1>
+                <h1 class="zagolovok">Ресторан Seafood</h1>
                 <p class="p">Додаток</p>
             </li>
             <li>
                 <img src="./img/img3.jpg" alt="наушники" width="370px">
-                <h1 class="hh">Проєкт Prime</h1>
+                <h1 class="zagolovok">Проєкт Prime</h1>
                 <p class="p">Маркетинг</p>
             </li>
             <li>
                 <img src="./img/img4.jpg" alt="коробочки" width="370px">
-                <h1 class="hh">Проєкт Boxes</h1>
+                <h1 class="zagolovok">Проєкт Boxes</h1>
                 <p class="p">Додаток</p>
             </li>
             <li>
                 <img src="./img/img5.jpg" alt="монитор" width="370px">
-                <h1 class="hh">Inspiration has no Borders</h1>
+                <h1 class="zagolovok">Inspiration has no Borders</h1>
                 <p class="p">Веб-сайт</p>
             </li>
             <li>
                 <img src="./img/img6.jpg" alt="книга" width="370px">
-                <h1 class="hh">Видання Limited Edition</h1>
+                <h1 class="zagolovok">Видання Limited Edition</h1>
                 <p class="p">Дизайн</p>
             </li>
             <li>
                 <img src="./img/img7.jpg" alt="постер проекта" width="370px">
-                <h1 class="hh">Проєкт LAB</h1>
+                <h1 class="zagolovok">Проєкт LAB</h1>
                 <p class="p">Маркетинг</p>
             </li>
             <li>
                 <img src="./img/img8.jpg" alt="робота за компом" width="370px">
-                <h1 class="hh">Growing Business</h1>
+                <h1 class="zagolovok">Growing Business</h1>
                 <p class="p">Додаток</p>
             </li>
         </ul>
@@ -98,13 +98,13 @@
     <footer class="footer">
         <a href="" class="logo"><span class="web">Web</span>Studio</a>
         <address>
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
+            <p class="gorod">м. Київ, пр-т Лесі Українки, 26</p>
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
