--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap');
     </style>
     <title>Document</title>
 </head>
@@ -15,8 +15,8 @@
 <body class="body">
 
     <!-- Header -->
-    <header>
-        <nav class="nav">
+    <header class="header">
+        <nav>
             <a href="" class="logo"><span class="web">Web</span>Studio</a>
             <ul>
                 <li><a href="" class="studio">Студія</a>
@@ -27,48 +27,48 @@
             </ul>
         </nav>
         <!-- Contact -->
-        <ul class="nomer">
+        <ul>
             <li>
                 <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
             </li>
 
         </ul>
     </header>
     <!-- Hero  -->
     <main>
-        <section class="fon">
-            <h1 class="h">Ефективні рішення для вашого бізнесу</h1>
+        <section class="hero-section">
+            <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
             <button class="posluga">Замовити послугу</button>
         </section>
         <!-- Kakoito tekst -->
-        <section>
+        <section class="perevagi">
             <ul>
                 <li>
-                    <h3 class="hhh">УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>
+                    <h3 class="zagolovok">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="text">
                         Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                     </p>
                 </li>
 
                 <li>
-                    <h3 class="hhh">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>
+                    <h3 class="zagolovok">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="text">
                         Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                     </p>
                 </li>
 
                 <li>
-                    <h3 class="hhh">ПЛАНУВАННЯ</h3>
-                    <p>
+                    <h3 class="zagolovok">ПЛАНУВАННЯ</h3>
+                    <p class="text">
                         Так само консультація з широким активом значною мірою зумовлює.
                     </p>
                 </li>
                 <li>
-                    <h3 class="hhh">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>
+                    <h3 class="zagolovok">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="text">
                         Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                     </p>
                 </li>
@@ -78,7 +78,7 @@
         </section>
         <!-- Chem Zanimaemsa -->
         <section class="zanatia">
-            <h2 class="hhh"><span class="bol-slov">Чим ми займаємося</span></h2>
+            <h2 class="zagolovok">Чим ми займаємося</h2>
             <ul>
                 <li><img src="./images/img.jpg" alt="человек работает за компом" width="370"> </li>
                 <li><img src="./images/img1.jpg" alt="человек работает за компом" width="370"> </li>
@@ -87,31 +87,31 @@
             </ul>
         </section>
         <!-- Nasha Komanda -->
-        <section class="comanda">
-            <h2 class="hhh"><span class="bol-slov">Наша команда</span></h2>
+        <section class="comanda-section">
+            <h2 class="zagolovok-komanda">Наша команда</h2>
             <ul>
                 <li>
                     <img src="images/img3.jpg" alt="ігор дем'яненко" width="270">
-                    <h3 class="hhh">Ігор Дем'яненко</h3>
-                    <p class="hhh">Product Designer</p>
+                    <h3 class="ima">Ігор Дем'яненко</h3>
+                    <p class="zanatia">Product Designer</p>
                 </li>
 
                 <li>
                     <img src="images/img4.jpg" alt="ольга рєпіна" width="270">
-                    <h3 class="hhh">Ольга Рєпіна</h3>
-                    <p class="hhh">Frontend Developer</p>
+                    <h3 class="ima">Ольга Рєпіна</h3>
+                    <p class="zanatia">Frontend Developer</p>
                 </li>
 
                 <li>
                     <img src="images/img5.jpg" alt="микола тарасов" width="270">
-                    <h3 class="hhh">Микола Тарасов</h3>
-                    <p class="hhh">Marketing</p>
+                    <h3 class="ima">Микола Тарасов</h3>
+                    <p class="zanatia">Marketing</p>
                 </li>
 
                 <li>
                     <img src="images/img6.jpg" alt="михайло єрмаков" width="270">
-                    <h3 class="hhh">Михайло Єрмаков</h3>
-                    <p class="hhh">UI Designer</p>
+                    <h3 class="ima">Михайло Єрмаков</h3>
+                    <p class="zanatia">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -120,13 +120,13 @@
     <footer class="footer">
         <a href="" class="logo"><span class="web">Web</span>Studio</a>
         <address>
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
+            <p class="gorod">м. Київ, пр-т Лесі Українки, 26</p>
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
