--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styless.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap');
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https: //fonts.googleapis.com/css2?family= Oleo+Script & family= Raleway:wght@700 & family= Roboto :wght@400;500;700;900 & display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -39,60 +41,64 @@
     <!-- Menu -->
     <main>
         <!-- Navigacia -->
-        <ul class="navigasia">
-            <li><button type="button" class="button">Усі</button></li>
-            <li><button type="button" class="button">Веб-сайти</button></li>
-            <li><button type="button" class="button">Додатки</button></li>
-            <li><button type="button" class="button">Дизайн</button></li>
-            <li><button type="button" class="button">Маркетинг</button></li>
-        </ul>
+        <section>
+            <ul class="navigasia">
+                <li><button type="button" class="button">Усі</button></li>
+                <li><button type="button" class="button">Веб-сайти</button></li>
+                <li><button type="button" class="button">Додатки</button></li>
+                <li><button type="button" class="button">Дизайн</button></li>
+                <li><button type="button" class="button">Маркетинг</button></li>
+            </ul>
+        </section>
         <!-- Kartinki -->
-        <ul class="menu">
-            <li><img src="./img/img.jpg" alt="технокряк" width="370px">
-                <h1 class="zagolovok">Технокряк</h1>
-                <p class="p">Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./img/img1.jpg" alt="постер баскедбольной команди" width="370px">
-                <h1 class="zagolovok">Постер New Orlean vs Golden Star</h1>
-                <p class="p">Дизайн</p>
-            </li>
-            <li>
-                <img src="./img/img2.jpg" alt="логотип ресторана" width="370px">
-                <h1 class="zagolovok">Ресторан Seafood</h1>
-                <p class="p">Додаток</p>
-            </li>
-            <li>
-                <img src="./img/img3.jpg" alt="наушники" width="370px">
-                <h1 class="zagolovok">Проєкт Prime</h1>
-                <p class="p">Маркетинг</p>
-            </li>
-            <li>
-                <img src="./img/img4.jpg" alt="коробочки" width="370px">
-                <h1 class="zagolovok">Проєкт Boxes</h1>
-                <p class="p">Додаток</p>
-            </li>
-            <li>
-                <img src="./img/img5.jpg" alt="монитор" width="370px">
-                <h1 class="zagolovok">Inspiration has no Borders</h1>
-                <p class="p">Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./img/img6.jpg" alt="книга" width="370px">
-                <h1 class="zagolovok">Видання Limited Edition</h1>
-                <p class="p">Дизайн</p>
-            </li>
-            <li>
-                <img src="./img/img7.jpg" alt="постер проекта" width="370px">
-                <h1 class="zagolovok">Проєкт LAB</h1>
-                <p class="p">Маркетинг</p>
-            </li>
-            <li>
-                <img src="./img/img8.jpg" alt="робота за компом" width="370px">
-                <h1 class="zagolovok">Growing Business</h1>
-                <p class="p">Додаток</p>
-            </li>
-        </ul>
+        <section>
+            <ul class="menu">
+                <li><img src="./img/img.jpg" alt="технокряк" width="370px">
+                    <h2 class="zagolovok">Технокряк</h2>
+                    <p class="p">Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./img/img1.jpg" alt="постер баскедбольной команди" width="370px">
+                    <h2 class="zagolovok">Постер New Orlean vs Golden Star</h2>
+                    <p class="p">Дизайн</p>
+                </li>
+                <li>
+                    <img src="./img/img2.jpg" alt="логотип ресторана" width="370px">
+                    <h2 class="zagolovok">Ресторан Seafood</h2>
+                    <p class="p">Додаток</p>
+                </li>
+                <li>
+                    <img src="./img/img3.jpg" alt="наушники" width="370px">
+                    <h2 class="zagolovok">Проєкт Prime</h2>
+                    <p class="p">Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./img/img4.jpg" alt="коробочки" width="370px">
+                    <h2 class="zagolovok">Проєкт Boxes</h2>
+                    <p class="p">Додаток</p>
+                </li>
+                <li>
+                    <img src="./img/img5.jpg" alt="монитор" width="370px">
+                    <h2 class="zagolovok">Inspiration has no Borders</h2>
+                    <p class="p">Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./img/img6.jpg" alt="книга" width="370px">
+                    <h2 class="zagolovok">Видання Limited Edition</h2>
+                    <p class="p">Дизайн</p>
+                </li>
+                <li>
+                    <img src="./img/img7.jpg" alt="постер проекта" width="370px">
+                    <h2 class="zagolovok">Проєкт LAB</h2>
+                    <p class="p">Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./img/img8.jpg" alt="робота за компом" width="370px">
+                    <h2 class="zagolovok">Growing Business</h2>
+                    <p class="p">Додаток</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <!-- Podval -->
     <footer class="footer">
