--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap');
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https: //fonts.googleapis.com/css2?family= Oleo+Script & family= Raleway:wght@700 & family= Roboto :wght@400;500;700;900 & display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -40,7 +42,7 @@
     <!-- Hero  -->
     <main>
         <section class="hero-section">
-            <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
+            <h1 class="hero-text">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
             <button class="posluga">Замовити послугу</button>
         </section>
         <!-- Kakoito tekst -->
