--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https: //fonts.googleapis.com/css2?family= Oleo+Script & family= Raleway:wght@700 & family= Roboto :wght@400;500;700;900 & display=swap"
+        href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <title>Document</title>
 </head>
@@ -40,8 +40,9 @@
     </header>
     <!-- Menu -->
     <main>
-        <!-- Navigacia -->
         <section>
+            <!-- Navigacia -->
+
             <ul class="navigasia">
                 <li><button type="button" class="button">Усі</button></li>
                 <li><button type="button" class="button">Веб-сайти</button></li>
@@ -49,53 +50,63 @@
                 <li><button type="button" class="button">Дизайн</button></li>
                 <li><button type="button" class="button">Маркетинг</button></li>
             </ul>
-        </section>
-        <!-- Kartinki -->
-        <section>
+
+            <!-- Kartinki -->
+
             <ul class="menu">
-                <li><img src="./img/img.jpg" alt="технокряк" width="370px">
-                    <h2 class="zagolovok">Технокряк</h2>
-                    <p class="p">Веб-сайт</p>
+                <li>
+                    <a href=""><img src="./img/img.jpg" alt="технокряк" width="370px">
+                        <h2 class="zagolovok">Технокряк</h2>
+                        <p class="p">Веб-сайт</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./img/img1.jpg" alt="постер баскедбольной команди" width="370px">
-                    <h2 class="zagolovok">Постер New Orlean vs Golden Star</h2>
-                    <p class="p">Дизайн</p>
+                    <a href=""><img src="./img/img1.jpg" alt="постер баскедбольной команди" width="370px">
+                        <h2 class="zagolovok">Постер New Orlean vs Golden Star</h2>
+                        <p class="p">Дизайн</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./img/img2.jpg" alt="логотип ресторана" width="370px">
-                    <h2 class="zagolovok">Ресторан Seafood</h2>
-                    <p class="p">Додаток</p>
+                    <a href=""><img src="./img/img2.jpg" alt="логотип ресторана" width="370px">
+                        <h2 class="zagolovok">Ресторан Seafood</h2>
+                        <p class="p">Додаток</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./img/img3.jpg" alt="наушники" width="370px">
-                    <h2 class="zagolovok">Проєкт Prime</h2>
-                    <p class="p">Маркетинг</p>
+                    <a href=""><img src="./img/img3.jpg" alt="наушники" width="370px">
+                        <h2 class="zagolovok">Проєкт Prime</h2>
+                        <p class="p">Маркетинг</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./img/img4.jpg" alt="коробочки" width="370px">
-                    <h2 class="zagolovok">Проєкт Boxes</h2>
-                    <p class="p">Додаток</p>
+                    <a href=""><img src="./img/img4.jpg" alt="коробочки" width="370px">
+                        <h2 class="zagolovok">Проєкт Boxes</h2>
+                        <p class="p">Додаток</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./img/img5.jpg" alt="монитор" width="370px">
-                    <h2 class="zagolovok">Inspiration has no Borders</h2>
-                    <p class="p">Веб-сайт</p>
+                    <a href=""><img src="./img/img5.jpg" alt="монитор" width="370px">
+                        <h2 class="zagolovok">Inspiration has no Borders</h2>
+                        <p class="p">Веб-сайт</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./img/img6.jpg" alt="книга" width="370px">
-                    <h2 class="zagolovok">Видання Limited Edition</h2>
-                    <p class="p">Дизайн</p>
+                    <a href=""><img src="./img/img6.jpg" alt="книга" width="370px">
+                        <h2 class="zagolovok">Видання Limited Edition</h2>
+                        <p class="p">Дизайн</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./img/img7.jpg" alt="постер проекта" width="370px">
-                    <h2 class="zagolovok">Проєкт LAB</h2>
-                    <p class="p">Маркетинг</p>
+                    <a href=""><img src="./img/img7.jpg" alt="постер проекта" width="370px">
+                        <h2 class="zagolovok">Проєкт LAB</h2>
+                        <p class="p">Маркетинг</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./img/img8.jpg" alt="робота за компом" width="370px">
-                    <h2 class="zagolovok">Growing Business</h2>
-                    <p class="p">Додаток</p>
+                    <a href=""><img src="./img/img8.jpg" alt="робота за компом" width="370px">
+                        <h2 class="zagolovok">Growing Business</h2>
+                        <p class="p">Додаток</p>
+                    </a>
                 </li>
             </ul>
         </section>
