--- a/portfolio.html
+++ b/portfolio.html
@@ -55,55 +55,55 @@
 
             <ul class="menu">
                 <li>
-                    <a href=""><img src="./img/img.jpg" alt="технокряк" width="370px">
+                    <a href="" class="cilka"><img src="./img/img.jpg" alt="технокряк" width="370px">
                         <h2 class="zagolovok">Технокряк</h2>
                         <p class="p">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
-                    <a href=""><img src="./img/img1.jpg" alt="постер баскедбольной команди" width="370px">
+                    <a href="" class="cilka"><img src="./img/img1.jpg" alt="постер баскедбольной команди" width="370px">
                         <h2 class="zagolovok">Постер New Orlean vs Golden Star</h2>
                         <p class="p">Дизайн</p>
                     </a>
                 </li>
                 <li>
-                    <a href=""><img src="./img/img2.jpg" alt="логотип ресторана" width="370px">
+                    <a href="" class="cilka"><img src="./img/img2.jpg" alt="логотип ресторана" width="370px">
                         <h2 class="zagolovok">Ресторан Seafood</h2>
                         <p class="p">Додаток</p>
                     </a>
                 </li>
                 <li>
-                    <a href=""><img src="./img/img3.jpg" alt="наушники" width="370px">
+                    <a href="" class="cilka"><img src="./img/img3.jpg" alt="наушники" width="370px">
                         <h2 class="zagolovok">Проєкт Prime</h2>
                         <p class="p">Маркетинг</p>
                     </a>
                 </li>
                 <li>
-                    <a href=""><img src="./img/img4.jpg" alt="коробочки" width="370px">
+                    <a href="" class="cilka"><img src="./img/img4.jpg" alt="коробочки" width="370px">
                         <h2 class="zagolovok">Проєкт Boxes</h2>
                         <p class="p">Додаток</p>
                     </a>
                 </li>
                 <li>
-                    <a href=""><img src="./img/img5.jpg" alt="монитор" width="370px">
+                    <a href="" class="cilka"><img src="./img/img5.jpg" alt="монитор" width="370px">
                         <h2 class="zagolovok">Inspiration has no Borders</h2>
                         <p class="p">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
-                    <a href=""><img src="./img/img6.jpg" alt="книга" width="370px">
+                    <a href="" class="cilka"><img src="./img/img6.jpg" alt="книга" width="370px">
                         <h2 class="zagolovok">Видання Limited Edition</h2>
                         <p class="p">Дизайн</p>
                     </a>
                 </li>
                 <li>
-                    <a href=""><img src="./img/img7.jpg" alt="постер проекта" width="370px">
+                    <a href="" class="cilka"><img src="./img/img7.jpg" alt="постер проекта" width="370px">
                         <h2 class="zagolovok">Проєкт LAB</h2>
                         <p class="p">Маркетинг</p>
                     </a>
                 </li>
                 <li>
-                    <a href=""><img src="./img/img8.jpg" alt="робота за компом" width="370px">
+                    <a href="" class="cilka"><img src="./img/img8.jpg" alt="робота за компом" width="370px">
                         <h2 class="zagolovok">Growing Business</h2>
                         <p class="p">Додаток</p>
                     </a>
