--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
 
     <!-- Header -->
     <header class="header">
-        <nav>
+        <nav class="nav">
             <a href="" class="logo"><span class="web">Web</span>Studio</a>
-            <ul>
-                <li><a href="" class="studio">Студія</a>
+            <ul class="navigacia">
+                <li><a href="./index.html" class="studio item">Студія</a>
                 </li>
-                <li><a href="./portfolio.html" class="portfolio">Портфоліо </a></li>
+                <li><a href="./portfolio.html" class="portfolio item">Портфоліо </a></li>
 
-                <li><a href="" class="contact">Контакти</a></li>
+                <li><a href="" class="contact item">Контакти</a></li>
             </ul>
         </nav>
         <!-- Contact -->
-        <ul>
+        <ul class="ul">
             <li>
-                <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="email item">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="nomer item">+38 096 111 11 11</a>
             </li>
 
         </ul>
@@ -47,28 +47,28 @@
         </section>
         <!-- Kakoito tekst -->
         <section class="perevagi">
-            <ul>
-                <li>
+            <ul class="ul">
+                <li class="item">
                     <h3 class="zagolovok">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p class="text">
                         Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                     </p>
                 </li>
 
-                <li>
+                <li class="item">
                     <h3 class="zagolovok">ПУНКТУАЛЬНІСТЬ</h3>
                     <p class="text">
                         Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                     </p>
                 </li>
 
-                <li>
+                <li class="item">
                     <h3 class="zagolovok">ПЛАНУВАННЯ</h3>
                     <p class="text">
                         Так само консультація з широким активом значною мірою зумовлює.
                     </p>
                 </li>
-                <li>
+                <li class="item">
                     <h3 class="zagolovok">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p class="text">
                         Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -81,36 +81,36 @@
         <!-- Chem Zanimaemsa -->
         <section class="zanatia">
             <h2 class="zagolovok">Чим ми займаємося</h2>
-            <ul>
-                <li><img src="./images/img.jpg" alt="человек работает за компом" width="370"> </li>
-                <li><img src="./images/img1.jpg" alt="человек работает за компом" width="370"> </li>
-                <li><img src="./images/img2.jpg" alt="человек работает за ноутом" width="370"> </li>
+            <ul class="ul">
+                <li class="kartinka"><img src="./images/img.jpg" alt="человек работает за компом" width="370"> </li>
+                <li class="kartinka"><img src="./images/img1.jpg" alt="человек работает за компом" width="370"> </li>
+                <li class="kartinka"><img src="./images/img2.jpg" alt="человек работает за ноутом" width="370"> </li>
 
             </ul>
         </section>
         <!-- Nasha Komanda -->
         <section class="comanda-section">
             <h2 class="zagolovok-komanda">Наша команда</h2>
-            <ul>
-                <li>
+            <ul class="comanda-ul">
+                <li class="comanda-li">
                     <img src="images/img3.jpg" alt="ігор дем'яненко" width="270">
                     <h3 class="ima">Ігор Дем'яненко</h3>
                     <p class="zanatia">Product Designer</p>
                 </li>
 
-                <li>
+                <li class="comanda-li">
                     <img src="images/img4.jpg" alt="ольга рєпіна" width="270">
                     <h3 class="ima">Ольга Рєпіна</h3>
                     <p class="zanatia">Frontend Developer</p>
                 </li>
 
-                <li>
+                <li class="comanda-li">
                     <img src="images/img5.jpg" alt="микола тарасов" width="270">
                     <h3 class="ima">Микола Тарасов</h3>
                     <p class="zanatia">Marketing</p>
                 </li>
 
-                <li>
+                <li class="comanda-li">
                     <img src="images/img6.jpg" alt="михайло єрмаков" width="270">
                     <h3 class="ima">Михайло Єрмаков</h3>
                     <p class="zanatia">UI Designer</p>
