--- a/portfolio.html
+++ b/portfolio.html
@@ -17,23 +17,23 @@
 <body class="body">
     <!-- Header -->
     <header class="header">
-        <nav>
+        <nav class="nav">
             <a href="" class="logo"><span class="web">Web</span>Studio</a>
-            <ul>
-                <li><a href="./index.html" class="studio">Студія</a>
+            <ul class="navigacia">
+                <li><a href="./index.html" class="studio item">Студія</a>
                 </li>
-                <li><a href="./portfolio.html" class="portfolio">Портфоліо </a></li>
+                <li><a href="./portfolio.html" class="portfolio item">Портфоліо </a></li>
 
-                <li><a href="" class="contact">Контакти</a></li>
+                <li><a href="" class="contact item">Контакти</a></li>
             </ul>
         </nav>
         <!-- Contact -->
-        <ul>
+        <ul class="ul">
             <li>
-                <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="email item">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="nomer item">+38 096 111 11 11</a>
             </li>
 
         </ul>
@@ -54,55 +54,55 @@
             <!-- Kartinki -->
 
             <ul class="menu">
-                <li>
+                <li class="li">
                     <a href="" class="cilka"><img src="./img/img.jpg" alt="технокряк" width="370px">
                         <h2 class="zagolovok">Технокряк</h2>
                         <p class="p">Веб-сайт</p>
                     </a>
                 </li>
-                <li>
+                <li class="li">
                     <a href="" class="cilka"><img src="./img/img1.jpg" alt="постер баскедбольной команди" width="370px">
                         <h2 class="zagolovok">Постер New Orlean vs Golden Star</h2>
                         <p class="p">Дизайн</p>
                     </a>
                 </li>
-                <li>
+                <li class="li">
                     <a href="" class="cilka"><img src="./img/img2.jpg" alt="логотип ресторана" width="370px">
                         <h2 class="zagolovok">Ресторан Seafood</h2>
                         <p class="p">Додаток</p>
                     </a>
                 </li>
-                <li>
+                <li class="li">
                     <a href="" class="cilka"><img src="./img/img3.jpg" alt="наушники" width="370px">
                         <h2 class="zagolovok">Проєкт Prime</h2>
                         <p class="p">Маркетинг</p>
                     </a>
                 </li>
-                <li>
+                <li class="li">
                     <a href="" class="cilka"><img src="./img/img4.jpg" alt="коробочки" width="370px">
                         <h2 class="zagolovok">Проєкт Boxes</h2>
                         <p class="p">Додаток</p>
                     </a>
                 </li>
-                <li>
+                <li class="li">
                     <a href="" class="cilka"><img src="./img/img5.jpg" alt="монитор" width="370px">
                         <h2 class="zagolovok">Inspiration has no Borders</h2>
                         <p class="p">Веб-сайт</p>
                     </a>
                 </li>
-                <li>
+                <li class="li">
                     <a href="" class="cilka"><img src="./img/img6.jpg" alt="книга" width="370px">
                         <h2 class="zagolovok">Видання Limited Edition</h2>
                         <p class="p">Дизайн</p>
                     </a>
                 </li>
-                <li>
+                <li class="li">
                     <a href="" class="cilka"><img src="./img/img7.jpg" alt="постер проекта" width="370px">
                         <h2 class="zagolovok">Проєкт LAB</h2>
                         <p class="p">Маркетинг</p>
                     </a>
                 </li>
-                <li>
+                <li class="li">
                     <a href="" class="cilka"><img src="./img/img8.jpg" alt="робота за компом" width="370px">
                         <h2 class="zagolovok">Growing Business</h2>
                         <p class="p">Додаток</p>
