--- a/portfolio.html
+++ b/portfolio.html
@@ -17,26 +17,33 @@
 <body class="body">
     <!-- Header -->
     <header class="header">
-        <nav class="nav">
+        <div class="konteiner flex">
             <a href="" class="logo"><span class="web">Web</span>Studio</a>
-            <ul class="navigacia">
-                <li><a href="./index.html" class="studio item">Студія</a>
-                </li>
-                <li><a href="./portfolio.html" class="portfolio item">Портфоліо </a></li>
+            <nav class="nav">
+                <ul class="navigacia">
+                    <div class="flex">
+                        <li><a href="./index.html" class="studio item">Студія</a>
+                        </li>
+                        <li><a href="./portfolio.html" class="portfolio item">Портфоліо </a>
+                        </li>
+                        <li><a href="" class="contact item">Контакти</a>
+                        </li>
+                    </div>
+                </ul>
+            </nav>
 
-                <li><a href="" class="contact item">Контакти</a></li>
+            <!-- Contact -->
+            <ul class="ul">
+                <div class="flex">
+                    <li>
+                        <a href="mailto:info@devstudio.com" class="email item">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111" class="nomer item">+38 096 111 11 11</a>
+                    </li>
+                </div>
             </ul>
-        </nav>
-        <!-- Contact -->
-        <ul class="ul">
-            <li>
-                <a href="mailto:info@devstudio.com" class="email item">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="nomer item">+38 096 111 11 11</a>
-            </li>
-
-        </ul>
+        </div>
     </header>
     <!-- Menu -->
     <main>
@@ -112,21 +119,22 @@
         </section>
     </main>
     <!-- Podval -->
+    <!-- Podval -->
     <footer class="footer">
-        <a href="" class="logo"><span class="web">Web</span>Studio</a>
-        <address>
-            <p class="gorod">м. Київ, пр-т Лесі Українки, 26</p>
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </address>
-
-
+        <div class="konteiner flex">
+            <a href="" class="logo"><span class="web">Web</span>Studio</a>
+            <address>
+                <p class="gorod">м. Київ, пр-т Лесі Українки, 26</p>
+                <ul>
+                    <li>
+                        <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
