--- a/index.html
+++ b/index.html
@@ -18,122 +18,138 @@
 
     <!-- Header -->
     <header class="header">
-        <nav class="nav">
+        <div class="konteiner flex">
             <a href="" class="logo"><span class="web">Web</span>Studio</a>
-            <ul class="navigacia">
-                <li><a href="./index.html" class="studio item">Студія</a>
-                </li>
-                <li><a href="./portfolio.html" class="portfolio item">Портфоліо </a></li>
+            <nav class="nav">
+                <ul class="navigacia">
+                    <div class="flex">
+                        <li><a href="./index.html" class="studio item">Студія</a>
+                        </li>
+                        <li><a href="./portfolio.html" class="portfolio item">Портфоліо </a>
+                        </li>
+                        <li><a href="" class="contact item">Контакти</a>
+                        </li>
+                    </div>
+                </ul>
+            </nav>
 
-                <li><a href="" class="contact item">Контакти</a></li>
+            <!-- Contact -->
+            <ul class="ul">
+                <div class="flex">
+                    <li>
+                        <a href="mailto:info@devstudio.com" class="email item">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111" class="nomer item">+38 096 111 11 11</a>
+                    </li>
+                </div>
             </ul>
-        </nav>
-        <!-- Contact -->
-        <ul class="ul">
-            <li>
-                <a href="mailto:info@devstudio.com" class="email item">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="nomer item">+38 096 111 11 11</a>
-            </li>
-
-        </ul>
+        </div>
     </header>
     <!-- Hero  -->
     <main>
         <section class="hero-section">
-            <h1 class="hero-text">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-            <button class="posluga">Замовити послугу</button>
+            <div class="konteiner flex">
+                <h1 class="hero-text">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+                <button class="posluga">Замовити послугу</button>
+            </div>
         </section>
         <!-- Kakoito tekst -->
         <section class="perevagi">
-            <ul class="ul">
-                <li class="item">
-                    <h3 class="zagolovok">УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="text">
-                        Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-                    </p>
-                </li>
+            <div class="konteiner flex">
+                <ul class="ul">
+                    <li class="item">
+                        <h3 class="zagolovok">УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p class="text">
+                            Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                        </p>
+                    </li>
 
-                <li class="item">
-                    <h3 class="zagolovok">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="text">
-                        Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-                    </p>
-                </li>
+                    <li class="item">
+                        <h3 class="zagolovok">ПУНКТУАЛЬНІСТЬ</h3>
+                        <p class="text">
+                            Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                        </p>
+                    </li>
 
-                <li class="item">
-                    <h3 class="zagolovok">ПЛАНУВАННЯ</h3>
-                    <p class="text">
-                        Так само консультація з широким активом значною мірою зумовлює.
-                    </p>
-                </li>
-                <li class="item">
-                    <h3 class="zagolovok">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="text">
-                        Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-                    </p>
-                </li>
-
-            </ul>
-
+                    <li class="item">
+                        <h3 class="zagolovok">ПЛАНУВАННЯ</h3>
+                        <p class="text">
+                            Так само консультація з широким активом значною мірою зумовлює.
+                        </p>
+                    </li>
+                    <li class="item">
+                        <h3 class="zagolovok">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p class="text">
+                            Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- Chem Zanimaemsa -->
         <section class="zanatia">
-            <h2 class="zagolovok">Чим ми займаємося</h2>
-            <ul class="ul">
-                <li class="kartinka"><img src="./images/img.jpg" alt="человек работает за компом" width="370"> </li>
-                <li class="kartinka"><img src="./images/img1.jpg" alt="человек работает за компом" width="370"> </li>
-                <li class="kartinka"><img src="./images/img2.jpg" alt="человек работает за ноутом" width="370"> </li>
-
-            </ul>
+            <div class="konteiner flex">
+                <h2 class="zagolovok">Чим ми займаємося</h2>
+                <ul class="ul">
+                    <li class="kartinka"><img src="./images/img.jpg" alt="человек работает за компом" width="370">
+                    </li>
+                    <li class="kartinka"><img src="./images/img1.jpg" alt="человек работает за компом" width="370">
+                    </li>
+                    <li class="kartinka"><img src="./images/img2.jpg" alt="человек работает за ноутом" width="370">
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- Nasha Komanda -->
         <section class="comanda-section">
-            <h2 class="zagolovok-komanda">Наша команда</h2>
-            <ul class="comanda-ul">
-                <li class="comanda-li">
-                    <img src="images/img3.jpg" alt="ігор дем'яненко" width="270">
-                    <h3 class="ima">Ігор Дем'яненко</h3>
-                    <p class="zanatia">Product Designer</p>
-                </li>
+            <div class="konteiner flex">
+                <h2 class="zagolovok-komanda">Наша команда</h2>
+                <ul class="comanda-ul">
+                    <li class="comanda-li">
+                        <img src="images/img3.jpg" alt="ігор дем'яненко" width="270">
+                        <h3 class="ima">Ігор Дем'яненко</h3>
+                        <p class="zanatia">Product Designer</p>
+                    </li>
 
-                <li class="comanda-li">
-                    <img src="images/img4.jpg" alt="ольга рєпіна" width="270">
-                    <h3 class="ima">Ольга Рєпіна</h3>
-                    <p class="zanatia">Frontend Developer</p>
-                </li>
+                    <li class="comanda-li">
+                        <img src="images/img4.jpg" alt="ольга рєпіна" width="270">
+                        <h3 class="ima">Ольга Рєпіна</h3>
+                        <p class="zanatia">Frontend Developer</p>
+                    </li>
 
-                <li class="comanda-li">
-                    <img src="images/img5.jpg" alt="микола тарасов" width="270">
-                    <h3 class="ima">Микола Тарасов</h3>
-                    <p class="zanatia">Marketing</p>
-                </li>
+                    <li class="comanda-li">
+                        <img src="images/img5.jpg" alt="микола тарасов" width="270">
+                        <h3 class="ima">Микола Тарасов</h3>
+                        <p class="zanatia">Marketing</p>
+                    </li>
 
-                <li class="comanda-li">
-                    <img src="images/img6.jpg" alt="михайло єрмаков" width="270">
-                    <h3 class="ima">Михайло Єрмаков</h3>
-                    <p class="zanatia">UI Designer</p>
-                </li>
-            </ul>
+                    <li class="comanda-li">
+                        <img src="images/img6.jpg" alt="михайло єрмаков" width="270">
+                        <h3 class="ima">Михайло Єрмаков</h3>
+                        <p class="zanatia">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
+
     </main>
     <!-- Podval -->
     <footer class="footer">
-        <a href="" class="logo"><span class="web">Web</span>Studio</a>
-        <address>
-            <p class="gorod">м. Київ, пр-т Лесі Українки, 26</p>
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </address>
-
-
+        <div class="konteiner flex">
+            <a href="" class="logo"><span class="web">Web</span>Studio</a>
+            <address>
+                <p class="gorod">м. Київ, пр-т Лесі Українки, 26</p>
+                <ul>
+                    <li>
+                        <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
