--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main>
         <section class="hero-section">
             <div class="konteiner flex">
-                <h1 class="hero-text">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+                <h1 class="hero-text">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br> ВАШОГО БІЗНЕСУ</h1>
                 <button class="posluga">Замовити послугу</button>
             </div>
         </section>
