--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,27 +24,23 @@
             <a href="" class="logo"><span class="web">Web</span>Studio</a>
             <nav class="nav">
                 <ul class="navigacia">
-                    <div class="flex">
-                        <li><a href="./index.html" class="studio item">Студія</a>
-                        </li>
-                        <li><a href="./portfolio.html" class="portfolio item">Портфоліо </a>
-                        </li>
-                        <li><a href="" class="contact item">Контакти</a>
-                        </li>
-                    </div>
+                    <li><a href="./index.html" class="studio item">Студія</a>
+                    </li>
+                    <li><a href="./portfolio.html" class="portfolio item">Портфоліо </a>
+                    </li>
+                    <li><a href="" class="contact item">Контакти</a>
+                    </li>
                 </ul>
             </nav>
 
             <!-- Contact -->
             <ul class="ul">
-                <div class="flex">
-                    <li>
-                        <a href="mailto:info@devstudio.com" class="email item">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+380961111111" class="nomer item">+38 096 111 11 11</a>
-                    </li>
-                </div>
+                <li>
+                    <a href="mailto:info@devstudio.com" class="email item">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111" class="nomer item">+38 096 111 11 11</a>
+                </li>
             </ul>
         </div>
     </header>
@@ -50,7 +48,7 @@
     <main>
         <section class="hero-section">
             <div class="konteiner flex">
-                <h1 class="hero-text">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br> ВАШОГО БІЗНЕСУ</h1>
+                <h1 class="hero-text">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
                 <button class="posluga">Замовити послугу</button>
             </div>
         </section>
