--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
         <!-- Kakoito tekst -->
         <section class="perevagi">
-            <div class="konteiner flex">
+            <div class="skonteiner flex">
                 <ul class="ul">
                     <li class="item">
                         <h3 class="zagolovok">УВАГА ДО ДЕТАЛЕЙ</h3>
