--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
         <!-- Kakoito tekst -->
         <section class="perevagi">
-            <div class="skonteiner flex">
+            <div class="konteiner flex">
                 <ul class="ul">
                     <li class="item">
                         <h3 class="zagolovok">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -86,15 +86,15 @@
             </div>
         </section>
         <!-- Chem Zanimaemsa -->
-        <section class="zanatia">
+        <section class="nashizanatia">
             <div class="konteiner flex">
                 <h2 class="zagolovok">Чим ми займаємося</h2>
                 <ul class="ul">
-                    <li class="kartinka"><img src="./images/img.jpg" alt="человек работает за компом" width="370">
+                    <li><img src="./images/img.jpg" alt="человек работает за компом" width="370" class="kartinka">
                     </li>
-                    <li class="kartinka"><img src="./images/img1.jpg" alt="человек работает за компом" width="370">
+                    <li><img src="./images/img1.jpg" alt="человек работает за компом" width="370" class="kartinka">
                     </li>
-                    <li class="kartinka"><img src="./images/img2.jpg" alt="человек работает за ноутом" width="370">
+                    <li><img src="./images/img2.jpg" alt="человек работает за ноутом" width="370" class="kartinka">
                     </li>
                 </ul>
             </div>
@@ -139,10 +139,10 @@
             <address>
                 <p class="gorod">м. Київ, пр-т Лесі Українки, 26</p>
                 <ul>
-                    <li>
+                    <li class="li">
                         <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
                     </li>
-                    <li>
+                    <li class="li">
                         <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
                     </li>
                 </ul>
