--- a/portfolio.html
+++ b/portfolio.html
@@ -23,27 +23,23 @@
             <a href="" class="logo"><span class="web">Web</span>Studio</a>
             <nav class="nav">
                 <ul class="navigacia">
-                    <div class="flex">
-                        <li><a href="./index.html" class="studio item">Студія</a>
-                        </li>
-                        <li><a href="./portfolio.html" class="portfolio item">Портфоліо </a>
-                        </li>
-                        <li><a href="" class="contact item">Контакти</a>
-                        </li>
-                    </div>
+                    <li><a href="./index.html" class="studio item">Студія</a>
+                    </li>
+                    <li><a href="./portfolio.html" class="portfolio item">Портфоліо </a>
+                    </li>
+                    <li><a href="" class="contact item">Контакти</a>
+                    </li>
                 </ul>
             </nav>
 
             <!-- Contact -->
             <ul class="ul">
-                <div class="flex">
-                    <li>
-                        <a href="mailto:info@devstudio.com" class="email item">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+380961111111" class="nomer item">+38 096 111 11 11</a>
-                    </li>
-                </div>
+                <li>
+                    <a href="mailto:info@devstudio.com" class="email item">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111" class="nomer item">+38 096 111 11 11</a>
+                </li>
             </ul>
         </div>
     </header>
@@ -121,17 +117,16 @@
         </section>
     </main>
     <!-- Podval -->
-    <!-- Podval -->
     <footer class="footer">
         <div class="konteiner flex">
             <a href="" class="logo"><span class="web">Web</span>Studio</a>
             <address>
                 <p class="gorod">м. Київ, пр-т Лесі Українки, 26</p>
                 <ul>
-                    <li>
+                    <li class="li">
                         <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
                     </li>
-                    <li>
+                    <li class="li">
                         <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
                     </li>
                 </ul>
